--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
   <title>Document</title>
 </head>
 <body>
+  <button id='myBtn'>Build</button>
   <div class='container' style="width: 700px;">
     <!-- The following are the dashes and y-axis -->
-    <div style="text-align: right; padding-bottom: 0px; vertical-align: bottom; border-bottom: 2px solid black; width: 50px">
-      _
-      <div style="height: 5px; border-bottom: 2px solid black;"></div>
-      _
-      <div style="margin-bottom: -2px; padding: 0px; border-bottom: 1px solid black; height: 10px; font-size: 5px"> 10</div>
-      y-axis
+    <div style="text-align: right; padding-bottom: 0px; vertical-align: bottom; width: 50px">
+      <div class = 'y-axis'>2</div>
+      <div class = 'y-axis'>1</div>
+      <div style="margin-bottom: 8px; border-bottom: 1px solid black;"></div>
+      <div style="height: 10px;"></div>
     </div>
     <!-- The following is the bars themselves-->
-    <div class = 'container' style = "border-bottom: solid black 2px;">
-      <div>
+    <div class = 'container' id ='conatainer'>
+      <!-- <div>
         <div  style="background:black; width:50px; height: 100px;"></div>
         <div class='titles' >hi</div>
       </div>
@@ -29,9 +29,11 @@
       <div>
         <div style="background:rgb(0, 119, 0); width:50px; height: 300px; margin-left: 5px; margin-right: 5px;"></div>
         <div class='titles'>456</div>
-      </div>
+      </div> -->
     </div>
 
   </div>
+  <script src="node_modules/jquery/dist/jquery.js"></script>
+  <script src=buildchart.js></script>
 </body>
 </html>
